# chroma-decoder

./: .gitignore  README.md  chroma-decoder.py  pyproject.toml
micropython/: project.yml
micropython/chroma_decoder/: code.py  color.py  color_set.py  controls.py  display.py  game.py  glyph.py  level.py  main.py  sound.py
micropython/docs/: TODO.md
micropython/pocs/: button.py  checklist.md  color-selector.py  neo-basic.py  neo-matrix.py  neo-pot.py  neo.py  piezo.py  piezo_music.py  rotary-enc.py
src/chroma_decoder/: version.py
