[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chroma-decoder"
dynamic = ["version"]
description = 'Single-Player Digital version of a Mastermind-like game'
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
keywords = ["mastermind"]
authors = [{ name = "Craig N. Caroon", email = "craig@caroon.org" }]
dependencies = [
  "virtual-led-matrix @ git+https://github.com/ccaroon/virtual-led-matrix@master",
]

[project.urls]
Documentation = "https://github.com/ccaroon/chroma-decoder#readme"
Issues = "https://github.com/ccaroon/chroma-decoder/issues"
Source = "https://github.com/ccaroon/chroma-decoder"

[tool.hatch.version]
path = "version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["chroma-decoder.py"]
